--- a/VCHESS_V1.2.1.ioc
+++ b/VCHESS_V1.2.1.ioc
@@ -375,7 +375,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true,10-MX_SPI1_Init-SPI1-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_USART1_UART_Init-USART1-false-HAL-true,13-MX_RTC_Init-RTC-false-HAL-true,14-MX_CRC_Init-CRC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true,10-MX_SPI1_Init-SPI1-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_USART1_UART_Init-USART1-false-HAL-true,13-MX_RTC_Init-RTC-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -461,7 +461,7 @@ TIM3.Pulse-PWM\ Generation4\ CH4=0
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM4.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM4.IPParameters=Channel-Input_Capture2_from_TI2,AutoReloadPreload
-USART1.BaudRate=256000
+USART1.BaudRate=115200
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
 USART2.BaudRate=9600
