--- a/VCHESS_V1.2.1.ioc
+++ b/VCHESS_V1.2.1.ioc
@@ -148,9 +148,8 @@ Mcu.IP1=FREERTOS
 Mcu.IP10=TIM3
 Mcu.IP11=TIM4
 Mcu.IP12=USART1
-Mcu.IP13=USART2
-Mcu.IP14=USB_DEVICE
-Mcu.IP15=USB_OTG_FS
+Mcu.IP13=USB_DEVICE
+Mcu.IP14=USB_OTG_FS
 Mcu.IP2=I2C1
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -159,53 +158,50 @@ Mcu.IP6=SPI1
 Mcu.IP7=SYS
 Mcu.IP8=TIM1
 Mcu.IP9=TIM2
-Mcu.IPNb=16
+Mcu.IPNb=15
 Mcu.Name=STM32F401C(B-C)Ux
 Mcu.Package=UFQFPN48
-Mcu.Pin0=PC13-ANTI_TAMP
-Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA5
-Mcu.Pin11=PA6
-Mcu.Pin12=PA7
-Mcu.Pin13=PB0
-Mcu.Pin14=PB1
-Mcu.Pin15=PB2
-Mcu.Pin16=PB10
-Mcu.Pin17=PB14
-Mcu.Pin18=PB15
-Mcu.Pin19=PA8
-Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA9
-Mcu.Pin21=PA10
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
-Mcu.Pin24=PA13
-Mcu.Pin25=PA14
-Mcu.Pin26=PA15
-Mcu.Pin27=PB3
-Mcu.Pin28=PB4
-Mcu.Pin29=PB5
-Mcu.Pin3=PH0 - OSC_IN
-Mcu.Pin30=PB6
-Mcu.Pin31=PB7
-Mcu.Pin32=PB8
-Mcu.Pin33=PB9
-Mcu.Pin34=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin35=VP_RTC_VS_RTC_Activate
-Mcu.Pin36=VP_RTC_VS_RTC_Calendar
-Mcu.Pin37=VP_SYS_VS_tim11
-Mcu.Pin38=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin39=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin40=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin41=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin42=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin5=PA0-WKUP
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA4
-Mcu.PinsNb=43
+Mcu.Pin0=PC14-OSC32_IN
+Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin10=PB0
+Mcu.Pin11=PB1
+Mcu.Pin12=PB2
+Mcu.Pin13=PB10
+Mcu.Pin14=PB14
+Mcu.Pin15=PB15
+Mcu.Pin16=PA8
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
+Mcu.Pin19=PA11
+Mcu.Pin2=PH0 - OSC_IN
+Mcu.Pin20=PA12
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PA15
+Mcu.Pin24=PB3
+Mcu.Pin25=PB4
+Mcu.Pin26=PB5
+Mcu.Pin27=PB6
+Mcu.Pin28=PB7
+Mcu.Pin29=PB8
+Mcu.Pin3=PH1 - OSC_OUT
+Mcu.Pin30=PB9
+Mcu.Pin31=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin32=VP_RTC_VS_RTC_Activate
+Mcu.Pin33=VP_RTC_VS_RTC_Calendar
+Mcu.Pin34=VP_SYS_VS_tim11
+Mcu.Pin35=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin39=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin4=PA0-WKUP
+Mcu.Pin5=PA1
+Mcu.Pin6=PA4
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401CCUx
@@ -275,12 +271,6 @@ PA15.GPIOParameters=GPIO_Label
 PA15.GPIO_Label=CD4051_A
 PA15.Locked=true
 PA15.Signal=GPIO_Output
-PA2.Mode=Asynchronous
-PA2.Signal=USART2_TX
-PA3.GPIOParameters=GPIO_PuPd
-PA3.GPIO_PuPd=GPIO_PULLUP
-PA3.Mode=Asynchronous
-PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PA4.GPIO_Label=SPI_CS
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -335,10 +325,6 @@ PB8.Signal=I2C1_SCL
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
-PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
-PC13-ANTI_TAMP.GPIO_Label=LED
-PC13-ANTI_TAMP.Locked=true
-PC13-ANTI_TAMP.Signal=GPIO_Output
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -375,7 +361,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true,10-MX_SPI1_Init-SPI1-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_USART1_UART_Init-USART1-false-HAL-true,13-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true,10-MX_SPI1_Init-SPI1-false-HAL-true,11-MX_USART1_UART_Init-USART1-false-HAL-true,12-MX_RTC_Init-RTC-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -464,9 +450,6 @@ TIM4.IPParameters=Channel-Input_Capture2_from_TI2,AutoReloadPreload
 USART1.BaudRate=115200
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
-USART2.BaudRate=9600
-USART2.IPParameters=VirtualMode,BaudRate
-USART2.VirtualMode=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,MANUFACTURER_STRING,PRODUCT_STRING_CDC_FS
 USB_DEVICE.MANUFACTURER_STRING=SQChess
